--- a/hostpage.html
+++ b/hostpage.html
@@ -1,8 +1,10 @@
-<!DOCTYPE HTML PUBLIC>
-<html lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en" style="width:100%; height:100%;">
 <head>
-<body style="width:100%; height:100%; margin:0;">
-  <iframe src="https://docs.google.com/gview?url=https://github.com/Mamba2000/PatrickEatonResume/blob/main/PatrickEatonResumeV2.pdf&embedded=true"></iframe>
-</body>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>Patrick's Resume</title>
 </head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url=https://github.com/Mamba2000/PatrickEatonResume/blob/5d148faefe3b7e9e4a1fffd511d4125d0261fdab/PatrickEatonResumeV2.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
 </html>
